# kermit

./: .gitignore  CMakeLists.txt  Makefile  README.md  kermit.conf  simple_network_test.cpp  simple_test.conf  test_basic.cpp  test_config.sh  test_config_only  test_config_only.cpp  test_first_node.sh  test_kermit_network.py  test_network.cpp
src/: main.cpp
src/core/: circuit.cpp  config.cpp  expose_service.cpp  router.cpp
src/crypto/: crypto_manager.cpp
src/include/kermit/: config.h  core.h  crypto.h  expose_service.h  network.h  node_manager.h
src/network/: network_manager.cpp  node_manager.cpp  relay_node.cpp
